fix text overflow wrap

--- a/client/src/components/Urlshortener/Urlshortener.css
+++ b/client/src/components/Urlshortener/Urlshortener.css
@@ -48,3 +48,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.result {
+    overflow-wrap: break-word;
+}
